# tocs

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  source.md  test_toc.py  toc.py
.github/workflows/: ci.yml
tests/: test_toc.py
tests/fixtures/: lorem_ipsum_input.md  lorem_ipsum_output.md  multiple_headers_input.md  multiple_headers_output.md
toc/: main.py
tocs/: main.py
